--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 	<!-- JavaScript code to fetch and display the cards -->
 	<script>
-	const API_ENDPOINT = 'https://api.scryfall.com/cards/random?is%3Afoil%20e%3Ac16';
+	const API_ENDPOINT = 'https://api.scryfall.com/cards/random?q=is%3Acommander';
 	const CARD_COUNT = 15;
 	const cardContainer = document.getElementById('card-container');
 	const revealCardsButton = document.getElementById('reveal-cards-button');
